--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,15 @@
 	<classpathentry kind="lib" path="C:/JavaTPC/lib/gson-2.8.2.jar"/>
 	<classpathentry kind="lib" path="C:/JavaTPC/lib/json-20160810.jar"/>
 	<classpathentry kind="lib" path="C:/JavaTPC/lib/jsoup-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/commons-codec-1.14.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/commons-collections4-4.2.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/poi-4.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/xmlbeans-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/stax-api-1.0-2.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/poi-scratchpad-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="C:/JavaTPC/lib/poi-excelant-3.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
